Fix loader visibility and artist modal functionality

--- a/src/css/artist-modal.css
+++ b/src/css/artist-modal.css
@@ -31,7 +31,6 @@ p {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 2000;
-    display: flex;
     align-items: center;
     justify-content: center;
 }
